
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int _exit (int) ;
 int printf (char*,...) ;

void usage(char *n)
{
 printf("\nUsage: %s\t-f forced stop\n", n);
 printf("\t\t-s silent mode\n");
 printf("\t\t-c command to run\n");
 printf("\t\t-n SMP iterations\n");
 printf("\t\t-d race delta us\n");
 printf("\t\t-w wait time seconds\n");
 printf("\t\t-l alternate lib name\n");
 printf("\t\t-a alternate addr hex\n");
 printf("\n");
 _exit(1);
}
